move dashboard template names to metadata.json
